fix: page top spacing

--- a/services/web-app/components/mdx-wrapper/mdx-wrapper.module.scss
+++ b/services/web-app/components/mdx-wrapper/mdx-wrapper.module.scss
@@ -8,5 +8,5 @@
 @use '@carbon/react/scss/spacing' as spacing;
 
 .page-content {
-  padding-top: spacing.$spacing-10;
+  padding-top: spacing.$spacing-09;
 }
